<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonAdaugaDestinatie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_adauga_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.107" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_de_intampinare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="402dp"
        android:layout_height="385dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonAi"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/buttonAi"
        app:layout_constraintTop_toBottomOf="@+id/buttonAi"
        app:layout_constraintVertical_bias="0.386" />

    <Button
        android:id="@+id/buttonAi"
        android:layout_width="237dp"
        android:layout_height="53dp"
        android:text="@string/btn_adauga_date_ai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdaugaDestinatie"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonAdaugaDestinatie"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdaugaDestinatie"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/btmSetariPreferinte"
        android:layout_width="162dp"
        android:layout_height="54dp"
        android:text="@string/setariPreferinte"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />
</androidx.constraintlayout.widget.ConstraintLayout>